--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(untitled4)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(untitled4 main.cpp Paciente.cpp Paciente.h Enfermedad.cpp Enfermedad.h EnfermedadConteo.h ISave.cpp ISave.h PacienteAnalizado.cpp PacienteAnalizado.h ILoad.cpp ILoad.h JSON.cpp JSON.h Binario.cpp Binario.h Analisis.cpp Analisis.h Analisis1.cpp Analisis1.h Analisis2.cpp Analisis2.h Analisis3.cpp Analisis3.h App2Facade.cpp App2Facade.h PacienteAnalizadoManager.cpp PacienteAnalizadoManager.h EnfermedadPacientes.cpp EnfermedadPacientes.h)
+add_executable(untitled4 main.cpp Paciente.cpp Paciente.h Enfermedad.cpp Enfermedad.h EnfermedadConteo.h ISave.cpp ISave.h PacienteAnalizado.cpp PacienteAnalizado.h ILoad.cpp ILoad.h JSON.cpp JSON.h Binario.cpp Binario.h Analisis.cpp Analisis.h Analisis1.cpp Analisis1.h Analisis2.cpp Analisis2.h Analisis3.cpp Analisis3.h App2Facade.cpp App2Facade.h PacienteAnalizadoManager.cpp PacienteAnalizadoManager.h EnfermedadPacientes.cpp EnfermedadPacientes.h Menu.cpp Menu.h)
